--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,7 @@ dmypy.json
 
 # End of https://www.gitignore.io/api/python,jupyternotebooks
 .DS_Store
+
+# Custom
+covid/Untitled.ipynb
+docs/Ian'sPost.jpg
